# Cardano-VRF

./: .gitignore  BYTE_FOR_BYTE_CHECKLIST.md  CHANGELOG.md  COMPLETE_PARITY_REPORT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CRYPTOGRAPHIC_PARITY_REPORT.md  Cargo.toml  FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  LIBSODIUM_PARITY_ANALYSIS.md  LICENSE-APACHE  LICENSE-MIT  PRODUCTION_DEPLOYMENT.md  QUICK_FIX_GUIDE.md  README.md  RESEARCH_SUMMARY.md  ROADMAP.md  SECURITY_IMPLEMENTATION.md  STATUS.md  TEST_VECTOR_PARITY.md  VERIFICATION_CHECKLIST.md  fetch_test_vectors.sh  test_scalar_mult.rs  validate.sh
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: HSM_DEPLOYMENT_GUIDE.md  QUICK_START.md  SECURITY.md
examples/: basic_usage.rs  debug_vrf.rs  keypair_generation.rs  production_hsm.rs  test_negation.rs  test_properties.rs  test_scalar_mul.rs
scripts/: ci-check.sh
src/: common.rs  draft03.rs  draft13.rs  lib.rs  logging.rs  metrics.rs
src/cardano_compat/: mod.rs  point.rs  prove.rs  verify.rs
src/hsm/: aws_cloudhsm.rs  azure_keyvault.rs  mod.rs  pkcs11.rs  software.rs
tests/: all_official_vectors.rs  comprehensive_validation.rs  official_test_vectors.rs  test_vector_parser.rs
